--- a/LabPractice1_FizzBuzz/Views/Shared/_Layout.cshtml
+++ b/LabPractice1_FizzBuzz/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Solve">Solve</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="//www.github.com/kengaroo92" target="_blank">GitHub</a>
+                            <a class="nav-link text-dark" href="//github.com/Kengaroo92/LabPractice1_FizzBuzz" target="_blank">GitHub</a>
                         </li>
 
                     </ul>
