--- a/LabPractice1_FizzBuzz/Views/Home/Solve.cshtml
+++ b/LabPractice1_FizzBuzz/Views/Home/Solve.cshtml
@@ -1,7 +1,13 @@
 ﻿@{
     ViewData["Title"] = "Solve - FizzBuzz";
 }
-<h1>@ViewData["Title"]</h1>
+<style>
+    body {
+        background-color: #85FFBD;
+        background-image: linear-gradient(0deg, #85FFBD 46%, #FFFB7D 100%);
+    }
+</style>
+<h1 class="style: text-center">@ViewData["Title"]</h1>
 
 <form asp-action="Solve">
     <br />
